# KLTN_NHOM113

./: .gitignore  README.md
AI-Python/: .gitignore  Dockerfile  api.py  api.rest  pyproject.toml  requirements.txt
AI-Python/model/: __init__.py  gpt.py  groq.py
Backend/: pom.xml
Backend/data/: districts.json
FrontendAdmin/: index.html  package-lock.json  package.json  vite.config.js.timestamp-1731933260433-5e41d2e8c06bb.mjs
FrontendAdmin/public/: index.html
FrontendAdmin/src/: App.tsx  main.tsx
FrontendAdmin/src/api/: axiosInstance.ts
FrontendAdmin/src/components/: AdvertiserSearchModal.tsx  CardDataStats.tsx
FrontendAdmin/src/config/: axios.config.ts
FrontendAdmin/src/context/: AuthContext.tsx
FrontendAdmin/src/css/: style.css
FrontendAdmin/src/interfaces/: Advertisement.ts  AdvertisementResponses.ts  Category.ts  ClickTracking.ts  MediaAdvertisement.ts  Service.ts  User.ts  UserResponse.ts
FrontendAdmin/src/layout/: AuthLayout.tsx  DefaultLayout.tsx
FrontendAdmin/src/pages/: Profile.tsx
FrontendAdmin/src/redux/: store.ts
FrontendAdmin/src/services/: advertisementService.ts  api.service.ts
FrontendAdmin/src/store/: store.ts
FrontendAdmin/src/types/: adventisement.ts
FrontendAdmin/src/utils/: auth.ts
FrontendClient/: .env  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.app.tsbuildinfo
FrontendClient/public/: index.html
FrontendClient/public/data/: AddressHCM.json
FrontendClient/src/: App.tsx  index.css  main.tsx
FrontendClient/src/config/: axios.config.ts
(+476 files in other folders)
